<resources>

    <string name="app_name">Apothecary\'s Treasures</string>

    <!--Product Options-->
    <string name="anonymitys_breath">Anonymity\'s Breath</string>
    <string name="assassins_choice">Assassin\'s Choice</string>
    <string name="beautys_deceit">Beauty\'s Deceit</string>
    <string name="carousal_gift">Carousal Gift</string>
    <string name="childs_whisper">Child\'s Whisper</string>
    <string name="elven_remedy">Elven Remedy</string>
    <string name="eye_of_atlantis">Eye of Atlantis</string>
    <string name="fairys_hope">Fairy\'s Hope</string>
    <string name="hydras_head">Hydra\'s Head</string>
    <string name="infernal_roots">Infernal Roots</string>
    <string name="jacks_beanstalk">Jack\'s Beanstalk</string>
    <string name="rays_of_a_star">Rays of a Star</string>
    <string name="regret_of_genesis">Regret of Genesis</string>
    <string name="shaper_of_dreams">Shaper of Dreams</string>
    <string name="shining_tears">Shining Tears</string>
    <string name="silencer_of_doubts">Silencer of Doubts</string>
    <string name="true_loves_myth">True Love\'s Myth</string>
    <string name="veiled_panacea">Veiled Panacea</string>
    <string name="wail_of_a_mermaid">Wail of a Mermaid</string>
    <string name="wallflowers_soul">Wallflower\'s Soul</string>

    <!--Supplier Options-->
    <string name="druids_hut">Druid\'s Hut</string>
    <string name="fairy_treehouse">Fairy Treehouse</string>
    <string name="hermits_hideout">Hermit\'s Hideout</string>
    <string name="sunken_ship">Sunken Ship</string>
    <string name="wiccas_dwelling">Wicca\'s Dwelling</string>

    <!--Activity Labels-->
    <string name="potion_inventory">Potion Inventory</string>
    <string name="add_potion">Add Potion</string>
    <string name="update_potion">Update Potion</string>

    <!--Menu Items-->
    <string name="add_potions">Add Potions</string>
    <string name="delete_inventory">Delete Inventory</string>
    <string name="save_potion">Save Potion</string>

    <!--Layout Text-->
    <string name="potion">Potion</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="default_view_text">Inventory is Empty.
        \nAdd more items by choosing a type of potion, the quantity and the supplier.</string>

    <!--Toast Messages-->
    <string name="minimum_quantity">Minimum quantity is 0</string>
    <string name="maximum_quantity">Maximum quantity is 10</string>
    <string name="zero_potions">Cannot add zero potions</string>
    <string name="already_listed">Potion is already listed</string>
    <string name="potion_added">Potion added</string>
    <string name="potion_not_added">Couldn\'t add potion</string>
    <string name="potion_updated">Potion updated</string>
    <string name="potion_not_updated">Couldn\'t update potion</string>
    <string name="potion_deleted">Potion deleted</string>
    <string name="potion_not_deleted">Couldn\'t delete potion</string>
    <string name="out_of_stock">Potion is out of stock</string>
    <string name="delete_dialog">Delete Potion?</string>
    <string name="discard_dialog">Discard Changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>