<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vertical"
    android:padding="@dimen/space_medium"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_medium"
        android:paddingTop="@dimen/space_huge">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/potion_image"
                android:layout_width="@dimen/large_image_width"
                android:layout_height="@dimen/large_image_height"
                tools:src="@drawable/anonymitys_breath" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/space_medium">

                <TextView
                    style="@style/HeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potion" />

                <Spinner
                    android:id="@+id/potion"
                    style="@style/TextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_medium"
                    android:spinnerMode="dropdown"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_huge">

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingLeft="@dimen/space_medium">

                <Button
                    android:id="@+id/subtraction"
                    style="@style/LightButtonStyle"
                    android:layout_width="@dimen/calculation_button_size"
                    android:layout_height="@dimen/calculation_button_size"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/TextStyle"
                    android:layout_width="@dimen/quantity_space"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="0" />

                <Button
                    android:id="@+id/addition"
                    style="@style/LightButtonStyle"
                    android:layout_width="@dimen/calculation_button_size"
                    android:layout_height="@dimen/calculation_button_size"
                    android:text="+" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_huge">

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical"
                android:paddingLeft="@dimen/space_medium">

                <Spinner
                    android:id="@+id/supplier_name"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item" />

                <TextView
                    android:id="@+id/supplier_phone"
                    style="@style/TextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/call"
                    android:drawablePadding="@dimen/space_medium"
                    android:paddingTop="@dimen/space_huge"
                    tools:text="00000000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_huge"
            android:paddingTop="@dimen/space_huge">

            <TextView
                style="@style/HeaderStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingLeft="@dimen/space_medium"
                tools:text="100 Coins" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/space_large">

            <Button
                android:id="@+id/order_button"
                style="@style/LightButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_medium"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_weight="1"
                android:text="@string/order" />

            <Button
                android:id="@+id/delete_button"
                style="@style/DarkButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_medium"
                android:layout_marginStart="@dimen/space_medium"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>